--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -141,4 +141,15 @@
 		    class="com.example.wizard1.views.BuffPicture" 
 		    android:id="@+id/enemy_buff5" />
 	</LinearLayout>
+	
+	<Button 
+	    android:id="@+id/calib"
+	   	android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+	    android:text="Calibrate"/>
+	<TextView 
+	    android:id="@+id/status"
+	   	android:layout_height="wrap_content"
+		android:layout_width="wrap_content"
+	    android:text="Calibrate"/>
 </LinearLayout>
