implement new recognition

--- a/res/layout/main_menu.xml
+++ b/res/layout/main_menu.xml
@@ -18,6 +18,9 @@
             <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
                     android:text="@string/Join_game" android:id="@+id/buttonJoinGame"
                     android:onClick="goToListOfBluetooth" />
+            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
+                    android:text="Calibrate" android:id="@+id/buttonCalibrate" />
+            
             <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40dp"
                     android:text="@string/Help" android:onClick="goToHelp"/>
             <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
