--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -17,6 +17,12 @@
         android:layout_height="wrap_content"
         android:text="Me"/>
         
+    <TextView
+        android:id="@+id/self_debug"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Self_debug"/>
+    
 	<RelativeLayout
 	    android:layout_width="fill_parent"
     	android:layout_height="wrap_content">
@@ -84,6 +90,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Enemy"/>
+	 
+	 <TextView
+        android:id="@+id/enemy_debug"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enemy_debug"/>
 	 
 	<RelativeLayout
 	    android:layout_width="fill_parent"
