--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,4 @@
 <resources>
-
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
@@ -17,6 +16,24 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <!-- Client Waiting theme -->
+    <style name="ClientWaitingDialog" parent="android:Theme.Dialog">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">#cccccc</item>
+        <item name="android:windowBackground">@drawable/client_waiting_bg</item>
+        <item name="android:buttonStyle">@style/ClientWaitingDialog.Button</item>
+    </style>
+    <style name="ClientWaitingDialog.Button" parent="@android:style/Widget.Button">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">#bebebe</item>
+        <item name="android:shadowColor">#151515</item>
+        <item name="android:background">@drawable/cancel_button</item>
+        <item name="android:shadowDx">2</item>
+        <item name="android:shadowDy">4</item>
+        <item name="android:shadowRadius">2</item>
+    </style>
+    
+    <!--  Countdown theme  -->
     <style name="CountdownDialog" parent="android:Theme.Dialog">
         <item name="android:windowBackground">@drawable/free</item>
     </style>
