add restart and change client waiting

--- a/res/layout/client_waiting.xml
+++ b/res/layout/client_waiting.xml
@@ -11,9 +11,10 @@
             android:indeterminate="true" 
             android:layout_marginTop="35dp" 
             android:layout_marginBottom="20dp" />
-    <view android:layout_width="220dp"
+    <view android:id="@+id/button_cancel_waiting" 
+        android:layout_width="220dp"
         android:layout_height="55dp"
         class="com.example.wizard1.views.CancelButton" 
         android:text="@string/cancel"
-        android:onClick="goBack" />
+        style="@style/ClientWaitingDialog.Button" />
 </LinearLayout>
