add all shapes to tutorial

--- a/res/xml/tutorial_text.xml
+++ b/res/xml/tutorial_text.xml
@@ -12,4 +12,20 @@
         <screen>Второе заклинание - "Кольцо Огня". Это тоже атакующие заклинание, но оно наносит уже большой урон. </screen>
         <screen>Попробуйте повторить это движение. Не забывайте нажимать на клавишу громкости.</screen>
     </part>
+    <part>
+    <screen>"Исцеление". Это восстанавливающее заклинание. Восполняет часть здоровья.</screen>
+</part>
+    <part>
+        <screen>"Порча". Наносит периодический урон противнику.</screen>
+    </part>
+    <part>
+        <screen>"Концентрация". Увелиивает наносимый урон.</screen>
+    </part>
+    <part>
+        <screen>"Благословение". Периодически восстанавливает здоровье.</screen>
+    </part>
+    <part>
+        <screen>"Божественный Щит". Блокирует один удар противника.</screen>
+        <screen>Если вы забудете заклинания, то можете быстро посмотреть их и их свойства в книге заклинаний.</screen>
+</part>
 </tutorial>
