Change tutorial gui

--- a/res/layout/tutorial.xml
+++ b/res/layout/tutorial.xml
@@ -9,71 +9,77 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tutorial_layout" android:layout_centerInParent="true">
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
-            android:id="@+id/spell_name"
-            android:textSize="25dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/spell_name"
-            android:gravity="center_vertical|center_horizontal"
-            android:textColor="#ffc8c8c8"
-            android:shadowColor="#355"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Large Text"
+                android:id="@+id/spell_name"
+                android:textSize="25dp"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/spell_name"
+                android:gravity="center_vertical|center_horizontal"
+                android:textColor="#ffc8c8c8"
+                android:shadowColor="#355"/>
 
-    <view   android:layout_width="290dp"
-            android:layout_height="290dp"
-            class="com.example.wizard1.views.SpellAnimation"
-            android:id="@+id/spell_anim_view"
-            android:layout_below="@+id/spell_name"
-            android:layout_margin="10dp"
-            android:layout_centerHorizontal="true"/>
+        <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/spell_name"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/spell_anim_view_l"
+                android:layout_margin="10dp">
 
-    <view   android:layout_width="50dp"
-        	android:layout_height="50dp"
-        	android:id="@+id/tutorial_cast_result"
-        	class="com.example.wizard1.views.SpellPicture" 
-        	android:layout_below="@+id/spell_anim_view"
-        	android:layout_centerHorizontal="true"
-        	android:layout_marginBottom="10dp" />
-        	
-    <view   android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:onClick="open"
-            android:background="@drawable/info"
-            android:layout_below="@+id/tutorial_cast_result"
-            android:layout_alignLeft="@+id/spell_anim_view"
-            class="com.example.wizard1.views.CancelButton"/>
+            <view android:layout_width="290dp"
+                  android:layout_height="290dp"
+                  class="com.example.wizard1.views.SpellAnimation"
+                  android:id="@+id/spell_anim_view"
+                  android:layout_centerHorizontal="true"/>
 
-    <TextView
-        	android:gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="1/5"
-            android:id="@+id/number_correct_spell"
-            android:layout_below="@+id/tutorial_cast_result"
-            android:textColor="#000"
-            android:layout_centerHorizontal="true"/>
-    
-    <view   android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:onClick="replay"
-            android:background="@drawable/replay"
-            android:layout_below="@+id/tutorial_cast_result"
-            android:layout_alignRight="@+id/spell_anim_view"
-            class="com.example.wizard1.views.CancelButton" android:id="@+id/view"/>
+            <view android:layout_width="50dp"
+                  android:layout_height="50dp"
+                  android:id="@+id/tutorial_cast_result"
+                  class="com.example.wizard1.views.SpellPicture"
+                  android:layout_centerHorizontal="true"
+                  android:layout_centerVertical="true"/>
+        </RelativeLayout>
 
-    
-    <!--<Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/button"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:onClick="addcount"/>-->
+        <view android:layout_width="40dp"
+              android:layout_height="40dp"
+              android:onClick="open"
+              android:background="@drawable/info"
+              android:layout_below="@+id/spell_anim_view_l"
+              android:layout_alignLeft="@+id/spell_anim_view_l"
+              class="com.example.wizard1.views.CancelButton"/>
+
+        <TextView
+                android:gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="1/5"
+                android:id="@+id/number_correct_spell"
+                android:layout_below="@+id/spell_anim_view_l"
+                android:textColor="#000"
+                android:layout_centerHorizontal="true"/>
+
+        <view android:layout_width="40dp"
+              android:layout_height="40dp"
+              android:onClick="replay"
+              android:background="@drawable/replay"
+              android:layout_below="@+id/spell_anim_view_l"
+              android:layout_alignRight="@+id/spell_anim_view_l"
+              class="com.example.wizard1.views.CancelButton" android:id="@+id/view"/>
+
+
+        <!--<Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Button"
+                android:id="@+id/button"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:onClick="addcount"/>-->
     </RelativeLayout>
 </RelativeLayout>
