--- a/res/layout/countdown.xml
+++ b/res/layout/countdown.xml
@@ -5,7 +5,7 @@
               android:layout_height="fill_parent">
 
     <view 
-        class="com.example.wizard1.views.MyTextView" 
+        class="com.wizardfight.views.MyTextView" 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="invisible"
