--- a/res/xml/tutorial_text.xml
+++ b/res/xml/tutorial_text.xml
@@ -28,4 +28,7 @@
         <screen>"Божественный Щит". Блокирует один удар противника.</screen>
         <screen>Если вы забудете заклинания, то можете быстро посмотреть их и их свойства в книге заклинаний.</screen>
 </part>
+    <part>
+        <screen>Поздравляю! Вы успешно прошли обучение! Вы настоящий маг!</screen>
+    </part>
 </tutorial>
