--- a/res/layout/countdown.xml
+++ b/res/layout/countdown.xml
@@ -2,7 +2,8 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+              android:layout_height="fill_parent"
+              android:background="#80000000">
 
     <view 
         class="com.wizardfight.views.MyTextView" 
