add full screen fight + animation without start offset

--- a/res/xml/tutorial_text.xml
+++ b/res/xml/tutorial_text.xml
@@ -9,13 +9,13 @@
         <uih>4</uih>
         <uim>5</uim>
         <screen>На экране боя можно увидеть два таких индикатора: верхний, отображает ваше состояние, и нижний, состояние противника.</screen>
-        <screen>Зеленая полоска - здоровье. Оно теряеться, если противник наложит на вас заклинание. Здоровье можно востановить специальными заклинаниями.</screen>
+        <screen>Зеленая полоска - здоровье. Оно теряется, если противник наложит на вас заклинание. Здоровье можно восстановить специальными заклинаниями.</screen>
         <screen>Синяя полоска - мана, она нужна для выполнения заклинаний. Каждое заклинание стоит определенное количество маны, она сама востанавливается со временем.</screen>
-        <screen>Первым заклинанием, которое мы выучим, будет "Конус Холода". Это атакующие заклинание, оно наносит незначительный урон по противнику.</screen>
+        <screen>Первым заклинанием, которое мы выучим, будет "Конус Холода". Это атакующее заклинание, оно наносит незначительный урон по противнику.</screen>
         <screen>Внимательно посмотрите, как нужно выполнять это заклинание и попробуйте повторить это движение. Не забывайте нажимать на клавишу громкости.</screen>
     </part>
     <part>
-        <screen>Второе заклинание - "Кольцо Огня". Это тоже атакующие заклинание, но оно наносит уже большой урон. </screen>
+        <screen>Второе заклинание - "Кольцо Огня". Это тоже атакующее заклинание, но оно наносит уже большой урон. </screen>
         <screen>Попробуйте повторить это движение. Не забывайте нажимать на клавишу громкости.</screen>
     </part>
     <part>
