--- a/res/layout/main_menu.xml
+++ b/res/layout/main_menu.xml
@@ -1,33 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent" 
-              android:id="@+id/mm_buttons"
-              android:background="@drawable/background">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" >
 
-        <LinearLayout android:orientation="vertical"
-                      android:layout_centerVertical="true"
-                      android:layout_centerHorizontal="true"
-                      android:layout_width="300dp"
-                      android:layout_height="wrap_content" android:layout_alignWithParentIfMissing="false">
-            <ImageView android:layout_width="match_parent" android:layout_height="200dp"
-                       android:background="@drawable/logo" />
-            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
-                    android:text="@string/Create_game" android:onClick="goToCreateGame"
-                    android:id="@+id/buttonCreateGame" />
-            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
-                    android:text="@string/Join_game" android:id="@+id/buttonJoinGame"
-                    android:onClick="goToJoinGame" />
-            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
-                    android:text="Test mode" android:id="@+id/buttonTestMode" 
-                    android:onClick="goToTestMode"/>
-            
-            <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40dp"
-                    android:text="@string/Help" android:onClick="goToHelp"/>
-            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
-                    android:text="@string/Spellbook" android:onClick="goToSpellbook"/>
-            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
-                    android:text="@string/Exit" android:onClick="Exit"/>
-        </LinearLayout>
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background"
+        android:orientation="vertical" >
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@drawable/logo" />
+
+        <Button
+            android:id="@+id/buttonCreateGame"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:onClick="goToCreateGame"
+            android:text="@string/Create_game" />
+
+        <Button
+            android:id="@+id/buttonJoinGame"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:onClick="goToJoinGame"
+            android:text="@string/Join_game" />
+
+        <Button
+            android:id="@+id/buttonTestMode"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:onClick="goToTestMode"
+            android:text="Test mode" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:onClick="goToHelp"
+            android:text="@string/Help" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:onClick="goToSpellbook"
+            android:text="@string/Spellbook" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:onClick="goToSettings"
+            android:text="@string/settings" />
+        
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:onClick="Exit"
+            android:text="@string/Exit" />
+    </LinearLayout>
+
+</ScrollView>
