--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -84,6 +84,18 @@
     </RelativeLayout>
     <RelativeLayout
             android:layout_width="fill_parent"
+            android:layout_weight="0"
+            android:layout_height="50dp">
+
+        <view android:layout_width="50dp"
+              android:layout_height="50dp"
+              android:id="@+id/recButton"
+              android:background="@drawable/button"
+              class="com.wizardfight.views.CancelButton"
+              android:layout_centerVertical="true" android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
+    <RelativeLayout
+            android:layout_width="fill_parent"
             android:layout_weight="1"
             android:layout_height="0dp">
         <view android:layout_width="196dp"
