--- a/res/layout/tutorial.xml
+++ b/res/layout/tutorial.xml
@@ -4,7 +4,11 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@drawable/paper">
+        android:background="@drawable/paper"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        android:id="@+id/tutorial_layout_root">
     <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
