--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -5,5 +5,6 @@
         android:key="recognition_type"
         android:entries="@array/recognition_types_labels"
         android:entryValues="@array/recognition_types_values"
-        android:summary="Select recognition type"/>
+        android:summary="Select recognition type"
+        android:defaultValue="23.08.14"/>
 </PreferenceScreen>
