--- a/res/layout/fight.xml
+++ b/res/layout/fight.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-
+        android:id="@+id/mainID"
         android:layout_width="fill_parent" android:layout_height="fill_parent">
     <ImageView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:id="@+id/background" android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true" android:layout_alignParentRight="true"
-            android:layout_above="@+id/self_name" android:src="@drawable/space_dark"/>
+            android:layout_above="@+id/mainID" android:src="@drawable/space_dark"/>
     <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
