remove old files and change Shape enum

--- a/res/layout/main_menu.xml
+++ b/res/layout/main_menu.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
 	android:layout_weight="1"
 	android:background="@drawable/background"
     android:fillViewport="true" >
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:orientation="vertical" >
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
             android:background="@drawable/logo" />
 
         <LinearLayout
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
         android:orientation="vertical" 
@@ -28,14 +29,14 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:onClick="goToCreateGame"
-            android:text="@string/Create_game" />
+            android:text="@string/Create_game" android:visibility="visible"/>
 
         <Button
             android:id="@+id/buttonJoinGame"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:onClick="goToJoinGame"
-            android:text="@string/Join_game" />
+            android:text="@string/Join_game" android:visibility="visible" />
 
         <Button
             android:id="@+id/buttonTestMode"
@@ -49,7 +50,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:onClick="goToDesktopConnection"
-            android:text="Connect" />
+            android:text="Connect" android:visibility="visible"/>
 
         <Button
             android:layout_width="fill_parent"
