--- a/res/layout/fight.xml
+++ b/res/layout/fight.xml
@@ -8,6 +8,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             class="com.wizardfight.views.FightBackground"
+            android:scaleType="fitXY"
             android:id="@+id/fight_background" android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
     <LinearLayout
