--- a/res/layout/main_menu.xml
+++ b/res/layout/main_menu.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <ImageView
@@ -50,7 +50,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:onClick="goToDesktopConnection"
-            android:text="Connect" android:visibility="visible"/>
+            android:text="@string/Connect" android:visibility="visible"/>
 
         <Button
             android:layout_width="fill_parent"
