--- a/res/xml/tutorial_text.xml
+++ b/res/xml/tutorial_text.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<tutorial xmlns:android="http://schemas.android.com/apk/res/android">
+<tutorial>
     <part>
         <screen>Добро пожаловать! Хотите научиться творить волшебство? Я вам помогу!</screen>
         <screen>Нужно запомнить, что необходимо зажать клавишу громкости во время выполения заклинания. Расположите телефон в руке так, что бы можно было удобно нажимать на любую из клавиш громкости. Попробуйте нажать на клавишу.</screen>
