--- a/res/layout/main_menu.xml
+++ b/res/layout/main_menu.xml
@@ -74,7 +74,7 @@
         <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:onClick="Exit"
+            android:onClick="exit"
             android:text="@string/Exit" />
         </LinearLayout>
         
